--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,5 +7,8 @@ jobs:
       - name: clone code
         uses: actions/checkout@v2
       - name: docker build
-        run: docker build -t  rshirinan/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+        run: docker build -t rshirinan/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker push
+        run: docker push rshirinan/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+
 
