--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,8 +7,10 @@ jobs:
       - name: clone code
         uses: actions/checkout@v2
       - name: docker build
-        run: docker build -t rshirinan/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+        run: docker build -t rafacom/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker login
+        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: docker push
-        run: docker push rshirinan/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+        run: docker push rafacom/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
 
 
