--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,7 +14,7 @@ jobs:
         run: docker push rafacom/test_docker_compose_1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push
+#    needs: build_and_push
     steps:
       - name: clone code
         uses: actions/checkout@v2
