--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -17,14 +17,14 @@ jobs:
     needs: build_and_push
     steps:
       - name: clone code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       - name: render configs
         run: |
           mkdir deploy 
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
           cat docker_ci_config.py | envsubst > deploy/docker_config.py
       - name: copy files to server
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
@@ -32,6 +32,6 @@ jobs:
           source: "deploy/docker-compose.yaml,deploy/docker_config.py"
           target: "flask_app_ci"
           strip_components: 1
-
+# Поменять в секрете ХОСТ
 
 
