--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -24,16 +24,14 @@ jobs:
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
           cat docker_ci_config.py | envsubst > deploy/docker_config.py
       - name: copy files to server
-        uses: appleboy/scp-action@master
+        uses: appleboy/ssh-action@master
         with:
-          host: 158.160.115.219
-          username: testuser
-#            from_secret: ssh_username
-          password: testuser
-#            from_secret: ssh_password
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
           source: "deploy/docker-compose.yaml,deploy/docker_config.py"
           target: "flask_app_ci"
           strip_components: 1
-# Поменять в секрете ХОСТ ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }} ${{ secrets.HOST }}
+# Поменять в секрете ХОСТ
 
 
