--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -36,6 +36,16 @@ jobs:
           source: "deploy/docker-compose.yaml,deploy/docker_config.py"
           target: "flask_app_ci"
           strip_components: 1
+      - name: deploy app
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd flask_app_ci
+            echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
 # Поменять в секрете ХОСТ
 
 
